syntax = "proto3";

package todo;

import "google/api/annotations.proto";
import "google/api/http.proto";

service TodoService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }

  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }

  rpc CreateTodo(CreateTodoRequest) returns (TodoResponse) {
    option (google.api.http) = {
      post: "/todos"
      body: "*"
    };
  }

  rpc GetTodo(GetTodoRequest) returns (TodoResponse) {
    option (google.api.http) = {
      get: "/todos/{id}"
    };
  }

  rpc GetAllTodos(GetAllTodosRequest) returns (GetAllTodosResponse) {
    option (google.api.http) = {
      get: "/todos"
    };
  }

  rpc UpdateTodo(UpdateTodoRequest) returns (TodoResponse) {
    option (google.api.http) = {
      put: "/todos/{id}"
      body: "*"
    };
  }

  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {
    option (google.api.http) = {
      delete: "/todos/{id}"
    };
  }

  rpc CompleteTodo(CompleteTodoRequest) returns (TodoResponse) {
    option (google.api.http) = {
      post: "/todos/{id}/complete"
      body: "*"
    };
  }
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message Todo {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int32 user_id = 5;
  string created_at = 6;
  string updated_at = 7;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateTodoRequest {
  string title = 1;
  string description = 2;
  int32 user_id = 3;
}

message GetTodoRequest {
  int32 id = 1;
}

message GetAllTodosRequest {
  int32 user_id = 1;
}

message UpdateTodoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  int32 user_id = 5;
}

message DeleteTodoRequest {
  int32 id = 1;
  int32 user_id = 2;
}

message CompleteTodoRequest {
  int32 id = 1;
  int32 user_id = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  int32 user_id = 4;
  User user = 5;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  int32 user_id = 3;
}

message TodoResponse {
  bool success = 1;
  string message = 2;
  Todo todo = 3;
}

message GetAllTodosResponse {
  bool success = 1;
  string message = 2;
  repeated Todo todos = 3;
  int32 total = 4;
  int32 page = 5;
  int32 limit = 6;
}

message DeleteTodoResponse {
  bool success = 1;
  string message = 2;
}